--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,16 +9,17 @@ footer {
 }
 
 header {
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url("../images/the-flatiron-building.png");
 }
 
 #design {
   color: white;
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url("../images/the-flatiron-building.png");
+
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 70px;
 }
 
 h2 {
